--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,5 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  logger: "1.1.0"
+  logger:
+     git:
+      url: https://github.com/nocode-nomoney/logger.git
   sensors: ^2.0.3
